fixed navbar layout issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -278,7 +278,7 @@ p {
   .nav-secondary span {
     font-size: 14px !important;
   }
-  #main_nav ul {
+  #main_nav .navbar-nav {
     padding: 0px !important;
   }
   #services .text-content-box h4,
